--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
+    "next-images": "^1.8.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +27,6 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
